@@ -6,6 +6,8 @@ import jakarta.validation.Validator;
 import jakarta.validation.ValidatorFactory;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.ListAssistCaseStatus;
@@ -16,6 +18,7 @@ import uk.gov.hmcts.reform.hmc.model.CaseDetails;
 import uk.gov.hmcts.reform.hmc.model.HearingDetails;
 import uk.gov.hmcts.reform.hmc.model.HearingLocation;
 import uk.gov.hmcts.reform.hmc.model.HearingRequest;
+import uk.gov.hmcts.reform.hmc.model.OrganisationDetails;
 import uk.gov.hmcts.reform.hmc.model.PartyDetails;
 import uk.gov.hmcts.reform.hmc.model.PartyType;
 import uk.gov.hmcts.reform.hmc.model.RequestDetails;
@@ -25,13 +28,13 @@ import uk.gov.hmcts.reform.hmc.model.linkedhearinggroup.GroupDetails;
 import uk.gov.hmcts.reform.hmc.utils.TestingUtil;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 import static uk.gov.hmcts.reform.hmc.exceptions.ValidationError.CATEGORY_TYPE_EMPTY;
 import static uk.gov.hmcts.reform.hmc.exceptions.ValidationError.CATEGORY_VALUE_EMPTY;
 import static uk.gov.hmcts.reform.hmc.exceptions.ValidationError.HEARING_LOCATION_EMPTY;
@@ -47,6 +50,7 @@ class BeanValidatorTest {
 
     private static ValidatorFactory validatorFactory;
     private static Validator validator;
+    String invalidUtf8 = "Text\uFFFF";
 
     @BeforeEach
     void createValidator() {
@@ -56,6 +60,47 @@ class BeanValidatorTest {
 
     @Test
     void shouldHaveHearingDetailsViolations() {
+        HearingDetails hearingDetails = generateHearingDetails();
+
+        Set<ConstraintViolation<HearingDetails>> violations = validator.validate(hearingDetails);
+        List<String> validationErrors = violations.stream()
+            .map(ConstraintViolation::getMessage)
+            .toList();
+        assertThat(violations).isNotEmpty().hasSize(9);
+        assertThat(validationErrors).contains(ValidationError.AUTO_LIST_FLAG_NULL_EMPTY)
+        .contains(ValidationError.HEARING_TYPE_MAX_LENGTH)
+        .contains(ValidationError.DURATION_MIN_VALUE)
+        .contains(ValidationError.HEARING_PRIORITY_TYPE)
+        .contains(ValidationError.NUMBER_OF_PHYSICAL_ATTENDEES_MIN_VALUE)
+        .contains(ValidationError.LEAD_JUDGE_CONTRACT_TYPE_MAX_LENGTH)
+        .contains(ValidationError.HEARING_LOCATION_EMPTY)
+        .contains(ValidationError.HEARING_CHANNEL_EMPTY);
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+        "null, 9, true, false",
+        "'', 9, true, false",
+        "'TTT', 10, false, true",
+        "'true', 9, false, false",
+        "'false', 9, false, false",
+    })
+    void shouldCheckIsAPanelViolations(String isAPanelFlag, int expectedViolationCount,
+                                            boolean containsNullEmptyError, boolean containsTypeError) {
+        HearingDetails hearingDetails = generateHearingDetails();
+        hearingDetails.setIsAPanelFlag(isAPanelFlag.equals("null") ? null : isAPanelFlag);
+
+        Set<ConstraintViolation<HearingDetails>> violations = validator.validate(hearingDetails);
+        List<String> validationErrors = violations.stream()
+            .map(ConstraintViolation::getMessage)
+            .toList();
+        assertThat(violations).isNotEmpty().hasSize(expectedViolationCount);
+
+        assertThat(validationErrors.contains(ValidationError.IS_A_PANEL_FLAG_INVALID_TYPE))
+            .isEqualTo(containsTypeError);
+    }
+
+    private HearingDetails generateHearingDetails() {
         HearingDetails hearingDetails = new HearingDetails();
         hearingDetails.setAutoListFlag(null);
         hearingDetails.setHearingType(
@@ -65,20 +110,8 @@ class BeanValidatorTest {
         hearingDetails.setNumberOfPhysicalAttendees(-1);
         hearingDetails.setLeadJudgeContractType("Lead judge contractLead judge contractLead judge contractLead judge "
                                                     + "contractLead judge contractLead judge contract");
-        Set<ConstraintViolation<HearingDetails>> violations = validator.validate(hearingDetails);
         hearingDetails.setPanelRequirements(TestingUtil.panelRequirements());
-        List<String> validationErrors = new ArrayList<>();
-        violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(10, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.AUTO_LIST_FLAG_NULL_EMPTY));
-        assertTrue(validationErrors.contains(ValidationError.HEARING_TYPE_MAX_LENGTH));
-        assertTrue(validationErrors.contains(ValidationError.DURATION_MIN_VALUE));
-        assertTrue(validationErrors.contains(ValidationError.HEARING_PRIORITY_TYPE));
-        assertTrue(validationErrors.contains(ValidationError.NUMBER_OF_PHYSICAL_ATTENDEES_MIN_VALUE));
-        assertTrue(validationErrors.contains(ValidationError.LEAD_JUDGE_CONTRACT_TYPE_MAX_LENGTH));
-        assertTrue(validationErrors.contains(ValidationError.HEARING_LOCATION_EMPTY));
-        assertTrue(validationErrors.contains(ValidationError.HEARING_CHANNEL_EMPTY));
+        return hearingDetails;
     }
 
     @Test
@@ -86,14 +119,13 @@ class BeanValidatorTest {
         HearingDetails hearingDetails = TestingUtil.hearingDetails();
         hearingDetails.setPanelRequirements(TestingUtil.panelRequirements());
         String reason = "NonStandardHearingDurationReasonsnonStandardHearingDurationReasonsnonStandardHearingDura ";
-        hearingDetails.setNonStandardHearingDurationReasons(Arrays.asList(reason));
+        hearingDetails.setNonStandardHearingDurationReasons(List.of(reason));
         Set<ConstraintViolation<HearingDetails>> violations = validator.validate(hearingDetails);
         hearingDetails.setPanelRequirements(TestingUtil.panelRequirements());
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.NON_STANDARD_HEARING_DURATION_REASONS_MAX_LENGTH_MSG));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.NON_STANDARD_HEARING_DURATION_REASONS_MAX_LENGTH_MSG);
     }
 
     @Test
@@ -104,9 +136,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingDetails>> violations = validator.validate(hearingDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(2, violations.size());
-        assertTrue(validationErrors.contains(HEARING_LOCATION_EMPTY));
+        assertThat(violations).isNotEmpty().hasSize(2);
+        assertThat(validationErrors).contains(HEARING_LOCATION_EMPTY);
     }
 
     @Test
@@ -122,10 +153,9 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingDetails>> violations = validator.validate(hearingDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(2, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.LOCATION_ID_EMPTY));
-        assertTrue(validationErrors.contains("Unsupported type for locationType"));
+        assertThat(violations).isNotEmpty().hasSize(2);
+        assertThat(validationErrors).contains(ValidationError.LOCATION_ID_EMPTY)
+            .contains("Unsupported type for locationType");
     }
 
     @Test
@@ -141,9 +171,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingDetails>> violations = validator.validate(hearingDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.LOCATION_ID_EMPTY));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.LOCATION_ID_EMPTY);
     }
 
     @Test
@@ -153,7 +182,7 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingDetails>> violations = validator.validate(hearingDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertTrue(violations.isEmpty());
+        assertThat(violations).isEmpty();
     }
 
     @Test
@@ -162,7 +191,7 @@ class BeanValidatorTest {
         Set<ConstraintViolation<CaseDetails>> violations = validator.validate(caseDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertTrue(violations.isEmpty());
+        assertThat(violations).isEmpty();
     }
 
     @Test
@@ -182,17 +211,67 @@ class BeanValidatorTest {
         Set<ConstraintViolation<CaseDetails>> violations = validator.validate(caseDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(12, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.HMCTS_SERVICE_CODE_EMPTY_INVALID));
-        assertTrue(validationErrors.contains(ValidationError.CASE_REF_EMPTY));
-        assertTrue(validationErrors.contains(ValidationError.EXTERNAL_CASE_REFERENCE_MAX_LENGTH));
-        assertTrue(validationErrors.contains(ValidationError.CASE_DEEP_LINK_INVALID));
-        assertTrue(validationErrors.contains(ValidationError.HMCTS_INTERNAL_CASE_NAME_EMPTY));
-        assertTrue(validationErrors.contains(ValidationError.PUBLIC_CASE_NAME_EMPTY));
-        assertTrue(validationErrors.contains(ValidationError.CASE_MANAGEMENT_LOCATION_CODE_EMPTY));
-        assertTrue(validationErrors.contains(ValidationError.CASE_RESTRICTED_FLAG_NULL_EMPTY));
+        assertThat(violations).isNotEmpty().hasSize(12);
+        assertThat(validationErrors).contains(ValidationError.HMCTS_SERVICE_CODE_EMPTY_INVALID)
+            .contains(ValidationError.CASE_REF_EMPTY)
+            .contains(ValidationError.EXTERNAL_CASE_REFERENCE_MAX_LENGTH)
+            .contains(ValidationError.CASE_DEEP_LINK_INVALID)
+            .contains(ValidationError.HMCTS_INTERNAL_CASE_NAME_EMPTY)
+            .contains(ValidationError.PUBLIC_CASE_NAME_EMPTY)
+            .contains(ValidationError.CASE_MANAGEMENT_LOCATION_CODE_EMPTY)
+            .contains(ValidationError.CASE_RESTRICTED_FLAG_NULL_EMPTY);
 
+    }
+
+    @Test
+    void shouldHave_CaseDetails_ValidRegExViolations() {
+        CaseDetails caseDetails = TestingUtil.caseDetails();
+        caseDetails.setHmctsInternalCaseName("Valid Text 123!@#");
+        caseDetails.setPublicCaseName("Valid Text 123!@#");
+        Set<ConstraintViolation<CaseDetails>> violations = validator.validate(caseDetails);
+        List<String> validationErrors = new ArrayList<>();
+        violations.forEach(e -> validationErrors.add(e.getMessage()));
+        assertTrue(violations.isEmpty());
+    }
+
+    @Test
+    void shouldHave_CaseDetails_RegExViolations() {
+        CaseDetails caseDetails = TestingUtil.caseDetails();
+        caseDetails.setHmctsInternalCaseName(invalidUtf8);
+        caseDetails.setPublicCaseName(invalidUtf8);
+        Set<ConstraintViolation<CaseDetails>> violations = validator.validate(caseDetails);
+        List<String> validationErrors = new ArrayList<>();
+        violations.forEach(e -> validationErrors.add(e.getMessage()));
+        assertFalse(violations.isEmpty());
+        assertEquals(2, violations.size());
+        assertTrue(validationErrors.contains(ValidationError.INVALID_HMCTS_INTERNAL_CASE_NAME));
+        assertTrue(validationErrors.contains(ValidationError.INVALID_PUBLIC_CASE_NAME));
+    }
+
+    @Test
+    void shouldHave_PartyDetails_RegExViolations() {
+        List<PartyDetails> partyDetailsList = TestingUtil.partyDetailsWith2Parties(true);
+        partyDetailsList.get(0).getIndividualDetails().setFirstName(invalidUtf8);
+        partyDetailsList.get(0).getIndividualDetails().setLastName(invalidUtf8);
+        Set<ConstraintViolation<PartyDetails>> violations = validator.validate(partyDetailsList.get(0));
+        List<String> validationErrors = new ArrayList<>();
+        violations.forEach(e -> validationErrors.add(e.getMessage()));
+        assertFalse(violations.isEmpty());
+        assertEquals(2, violations.size());
+        assertTrue(validationErrors.contains(ValidationError.INVALID_FIRST_NAME));
+        assertTrue(validationErrors.contains(ValidationError.INVALID_LAST_NAME));
+    }
+
+    @Test
+    void shouldHave_OrgDetails_RegExViolations() {
+        OrganisationDetails organisationDetails = TestingUtil.organisationDetails();
+        organisationDetails.setName(invalidUtf8);
+        Set<ConstraintViolation<OrganisationDetails>> violations = validator.validate(organisationDetails);
+        List<String> validationErrors = new ArrayList<>();
+        violations.forEach(e -> validationErrors.add(e.getMessage()));
+        assertFalse(violations.isEmpty());
+        assertEquals(1, violations.size());
+        assertTrue(validationErrors.contains(ValidationError.INVALID_ORGANISATION_NAME));
     }
 
     @Test
@@ -208,9 +287,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<CaseDetails>> violations = validator.validate(caseDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.CATEGORY_VALUE));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.CATEGORY_VALUE);
     }
 
     @Test
@@ -219,9 +297,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<RequestDetails>> violations = validator.validate(requestDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.VERSION_NUMBER_NULL_EMPTY));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.VERSION_NUMBER_NULL_EMPTY);
     }
 
     @Test
@@ -232,12 +309,11 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingResponse>> violations = validator.validate(hearingResponse);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(4, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.LIST_ASSIST_TRANSACTION_ID_MAX_LENGTH));
-        assertTrue(validationErrors.contains(ValidationError.HEARING_CANCELLATION_REASON_MAX_LENGTH));
-        assertTrue(validationErrors.contains("Unsupported type for laCaseStatus"));
-        assertTrue(validationErrors.contains(ValidationError.HEARING_STATUS_CODE_NULL));
+        assertThat(violations).isNotEmpty().hasSize(4);
+        assertThat(validationErrors).contains(ValidationError.LIST_ASSIST_TRANSACTION_ID_MAX_LENGTH)
+            .contains(ValidationError.HEARING_CANCELLATION_REASON_MAX_LENGTH)
+            .contains("Unsupported type for laCaseStatus")
+            .contains(ValidationError.HEARING_STATUS_CODE_NULL);
     }
 
     @Test
@@ -250,9 +326,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingResponse>> violations = validator.validate(hearingResponse);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.HEARING_STATUS_CODE_LENGTH));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.HEARING_STATUS_CODE_LENGTH);
     }
 
     @Test
@@ -265,7 +340,7 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingResponse>> violations = validator.validate(hearingResponse);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertTrue(violations.isEmpty());
+        assertThat(violations).isEmpty();
     }
 
     @Test
@@ -278,10 +353,9 @@ class BeanValidatorTest {
                 = validator.validate(requestDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(2, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.HEARING_GROUP_REQUEST_ID_MAX_LENGTH));
-        assertTrue(validationErrors.contains(ValidationError.HEARING_REQUEST_ID_MAX_LENGTH));
+        assertThat(violations).isNotEmpty().hasSize(2);
+        assertThat(validationErrors).contains(ValidationError.HEARING_GROUP_REQUEST_ID_MAX_LENGTH)
+            .contains(ValidationError.HEARING_REQUEST_ID_MAX_LENGTH);
     }
 
     @Test
@@ -293,9 +367,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingRequest>> violations = validator.validate(hearingRequest);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.INVALID_REQUEST_DETAILS));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.INVALID_REQUEST_DETAILS);
     }
 
     @Test
@@ -305,9 +378,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingRequest>> violations = validator.validate(hearingRequest);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.INVALID_HEARING_DETAILS));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.INVALID_HEARING_DETAILS);
     }
 
     @Test
@@ -320,9 +392,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingRequest>> violations = validator.validate(hearingRequest);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.INVALID_CASE_CATEGORIES));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.INVALID_CASE_CATEGORIES);
     }
 
     @Test
@@ -333,9 +404,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingRequest>> violations = validator.validate(hearingRequest);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.INVALID_PANEL_REQUIREMENTS));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.INVALID_PANEL_REQUIREMENTS);
     }
 
     @Test
@@ -346,9 +416,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingRequest>> violations = validator.validate(hearingRequest);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.INVALID_CASE_DETAILS));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.INVALID_CASE_DETAILS);
 
     }
 
@@ -362,9 +431,8 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingRequest>> violations = validator.validate(hearingRequest);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertFalse(violations.isEmpty());
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(ValidationError.INVALID_HEARING_LOCATION));
+        assertThat(violations).isNotEmpty().hasSize(1);
+        assertThat(validationErrors).contains(ValidationError.INVALID_HEARING_LOCATION);
 
     }
 
@@ -374,15 +442,15 @@ class BeanValidatorTest {
         category.setCategoryValue("XXX");
         category.setCategoryType(null);
         Set<ConstraintViolation<CaseCategory>> violations = validator.validate(category);
-        assertFalse(violations.isEmpty());
+        assertThat(violations).isNotEmpty();
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> {
             validationErrors.add(e.getMessage());
             logger.info(e.getMessage());
         });
-        assertEquals(2, violations.size());
-        assertTrue(validationErrors.contains("Unsupported type for categoryType"));
-        assertTrue(validationErrors.contains(CATEGORY_TYPE_EMPTY));
+        assertThat(violations).hasSize(2);
+        assertThat(validationErrors).contains("Unsupported type for categoryType")
+            .contains(CATEGORY_TYPE_EMPTY);
     }
 
     @Test
@@ -391,15 +459,14 @@ class BeanValidatorTest {
         category.setCategoryValue("XXXX");
         category.setCategoryType("");
         Set<ConstraintViolation<CaseCategory>> violations = validator.validate(category);
-        assertFalse(violations.isEmpty());
+        assertThat(violations).isNotEmpty();
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> {
             validationErrors.add(e.getMessage());
             logger.info(e.getMessage());
         });
-        assertEquals(2, violations.size());
-        assertTrue(validationErrors.contains("Unsupported type for categoryType"));
-        assertTrue(validationErrors.contains(CATEGORY_TYPE_EMPTY));
+        assertThat(violations).hasSize(2);
+        assertThat(validationErrors).contains("Unsupported type for categoryType").contains(CATEGORY_TYPE_EMPTY);
     }
 
     @Test
@@ -408,14 +475,14 @@ class BeanValidatorTest {
         category.setCategoryValue(null);
         category.setCategoryType(CaseCategoryType.CASETYPE.getLabel());
         Set<ConstraintViolation<CaseCategory>> violations = validator.validate(category);
-        assertFalse(violations.isEmpty());
+        assertThat(violations).isNotEmpty();
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> {
             validationErrors.add(e.getMessage());
             logger.info(e.getMessage());
         });
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(CATEGORY_VALUE_EMPTY));
+        assertThat(violations).hasSize(1);
+        assertThat(validationErrors).contains(CATEGORY_VALUE_EMPTY);
     }
 
     @Test
@@ -424,14 +491,14 @@ class BeanValidatorTest {
         category.setCategoryValue("");
         category.setCategoryType(CaseCategoryType.CASETYPE.getLabel());
         Set<ConstraintViolation<CaseCategory>> violations = validator.validate(category);
-        assertFalse(violations.isEmpty());
+        assertThat(violations).isNotEmpty();
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> {
             validationErrors.add(e.getMessage());
             logger.info(e.getMessage());
         });
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(CATEGORY_VALUE_EMPTY));
+        assertThat(violations).hasSize(1);
+        assertThat(validationErrors).contains(CATEGORY_VALUE_EMPTY);
     }
 
     @Test
@@ -441,14 +508,14 @@ class BeanValidatorTest {
         partyDetails.setPartyType(PartyType.IND.getLabel());
         partyDetails.setPartyRole("role1");
         Set<ConstraintViolation<PartyDetails>> violations = validator.validate(partyDetails);
-        assertFalse(violations.isEmpty());
+        assertThat(violations).isNotEmpty();
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> {
             validationErrors.add(e.getMessage());
             logger.info(e.getMessage());
         });
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(PARTY_DETAILS_NULL_EMPTY));
+        assertThat(violations).hasSize(1);
+        assertThat(validationErrors).contains(PARTY_DETAILS_NULL_EMPTY);
     }
 
     @Test
@@ -458,14 +525,14 @@ class BeanValidatorTest {
         partyDetails.setPartyType(PartyType.IND.getLabel());
         partyDetails.setPartyRole("role1");
         Set<ConstraintViolation<PartyDetails>> violations = validator.validate(partyDetails);
-        assertFalse(violations.isEmpty());
+        assertThat(violations).isNotEmpty();
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> {
             validationErrors.add(e.getMessage());
             logger.info(e.getMessage());
         });
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(PARTY_DETAILS_NULL_EMPTY));
+        assertThat(violations).hasSize(1);
+        assertThat(validationErrors).contains(PARTY_DETAILS_NULL_EMPTY);
     }
 
     @Test
@@ -475,15 +542,15 @@ class BeanValidatorTest {
         partyDetails.setPartyType(null);
         partyDetails.setPartyRole("role1");
         Set<ConstraintViolation<PartyDetails>> violations = validator.validate(partyDetails);
-        assertFalse(violations.isEmpty());
+        assertThat(violations).isNotEmpty();
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> {
             validationErrors.add(e.getMessage());
             logger.info(e.getMessage());
         });
-        assertEquals(2, violations.size());
-        assertTrue(validationErrors.contains("Unsupported type for partyType"));
-        assertTrue(validationErrors.contains(PARTY_TYPE_EMPTY));
+        assertThat(violations).hasSize(2);
+        assertThat(validationErrors).contains("Unsupported type for partyType")
+            .contains(PARTY_TYPE_EMPTY);
     }
 
     @Test
@@ -493,15 +560,15 @@ class BeanValidatorTest {
         partyDetails.setPartyType("");
         partyDetails.setPartyRole("role1");
         Set<ConstraintViolation<PartyDetails>> violations = validator.validate(partyDetails);
-        assertFalse(violations.isEmpty());
+        assertThat(violations).isNotEmpty();
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> {
             validationErrors.add(e.getMessage());
             logger.info(e.getMessage());
         });
-        assertEquals(2, violations.size());
-        assertTrue(validationErrors.contains("Unsupported type for partyType"));
-        assertTrue(validationErrors.contains(PARTY_TYPE_EMPTY));
+        assertThat(violations).hasSize(2);
+        assertThat(validationErrors).contains("Unsupported type for partyType")
+            .contains(PARTY_TYPE_EMPTY);
     }
 
     @Test
@@ -511,14 +578,14 @@ class BeanValidatorTest {
         partyDetails.setPartyType(PartyType.IND.getLabel());
         partyDetails.setPartyRole(null);
         Set<ConstraintViolation<PartyDetails>> violations = validator.validate(partyDetails);
-        assertFalse(violations.isEmpty());
+        assertThat(violations).isNotEmpty();
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> {
             validationErrors.add(e.getMessage());
             logger.info(e.getMessage());
         });
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(PARTY_ROLE_EMPTY));
+        assertThat(violations).hasSize(1);
+        assertThat(validationErrors).contains(PARTY_ROLE_EMPTY);
     }
 
     @Test
@@ -528,14 +595,14 @@ class BeanValidatorTest {
         partyDetails.setPartyType(PartyType.IND.getLabel());
         partyDetails.setPartyRole("");
         Set<ConstraintViolation<PartyDetails>> violations = validator.validate(partyDetails);
-        assertFalse(violations.isEmpty());
+        assertThat(violations).isNotEmpty();
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> {
             validationErrors.add(e.getMessage());
             logger.info(e.getMessage());
         });
-        assertEquals(1, violations.size());
-        assertTrue(validationErrors.contains(PARTY_ROLE_EMPTY));
+        assertThat(violations).hasSize(1);
+        assertThat(validationErrors).contains(PARTY_ROLE_EMPTY);
     }
 
     @Test
@@ -545,7 +612,7 @@ class BeanValidatorTest {
         partyDetails.setPartyType(PartyType.IND.getLabel());
         partyDetails.setPartyRole("abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMN");
         Set<ConstraintViolation<PartyDetails>> violations = validator.validate(partyDetails);
-        assertTrue(violations.isEmpty());
+        assertThat(violations).isEmpty();
     }
 
     @Test
@@ -555,10 +622,10 @@ class BeanValidatorTest {
         partyDetails.setPartyType(PartyType.IND.getLabel());
         partyDetails.setPartyRole("abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNO");
         Set<ConstraintViolation<PartyDetails>> violations = validator.validate(partyDetails);
-        assertEquals(1, violations.size());
-        assertTrue(violations.stream()
+        assertThat(violations).hasSize(1);
+        assertThat(violations.stream()
                        .map(ConstraintViolation::getMessage)
-                       .anyMatch(msg -> msg.equals(PARTY_ROLE_MAX_LENGTH)));
+                       .anyMatch(msg -> msg.equals(PARTY_ROLE_MAX_LENGTH))).isTrue();
     }
 
     @Test
@@ -569,7 +636,7 @@ class BeanValidatorTest {
         groupDetails.setGroupComments("groupComments");
         groupDetails.setGroupLinkType("linkType");
         Set<ConstraintViolation<GroupDetails>> violations = validator.validate(groupDetails);
-        assertTrue(violations.isEmpty());
+        assertThat(violations).isEmpty();
     }
 
     @Test
@@ -580,7 +647,7 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingDetails>> violations = validator.validate(hearingDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertTrue(violations.isEmpty());
+        assertThat(violations).isEmpty();
     }
 
     @Test
@@ -591,7 +658,7 @@ class BeanValidatorTest {
         Set<ConstraintViolation<HearingDetails>> violations = validator.validate(hearingDetails);
         List<String> validationErrors = new ArrayList<>();
         violations.forEach(e -> validationErrors.add(e.getMessage()));
-        assertTrue(violations.isEmpty());
+        assertThat(violations).isEmpty();
     }
 
 }
